[package]
edition = "2024"
name = "bitron-nuera"
version = "0.1.0"

[dependencies]
axum = "0.8.8"
axum-core = "0.5.5"
axum-server = "0.8.0"
clap = { version = "4.5.53", features = ["derive"] }
http = "1.4.0"
reqwest = "0.12.26"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = [
    "io-std",
    "macros",
    "rt-multi-thread",
] }
toml = "0.9.10"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
url = "2.5.7"
uuid = "1.19.0"
